fix spacing

--- a/src/components/Blueprint/BlueprintModule/BlueprintModule.module.css
+++ b/src/components/Blueprint/BlueprintModule/BlueprintModule.module.css
@@ -139,7 +139,7 @@
 .tradeContainer {
     background-color: #04121C;
 
-    width: 1400px;
+    width: 1500px;
 
     border-top: 1px solid #ccc;
 }
